--- a/.env
+++ b/.env
@@ -7,4 +7,12 @@ MAIL_USER = 'surajgund46@gmail.com'
 MAIL_PASS = 'yptracwfbztdyfyx'
 
 
+CLOUD_NAME = 'domi7tfkg'
+API_KEY = '814929395299381'
+API_SECRET = 'kXOKCdNqcvuECKs-5s5ICxGYul4'
+
 JWT_SECRET = 'suraj'
+
+FOLDER_NAME='Royal_FruitNuts'
+
+ADMIN_EMAIL = 'surajgund46@gmail.com'
