--- a/.env
+++ b/.env
@@ -1,11 +1,9 @@
 PORT = 4000
-MONGODB_URL = 'mongodb://localhost:27017/FruitNutsRoyal'
-
-
+MONGODB_URL = 'mongodb+srv://surajgund46:Ag8HR2WciQmGwfcd@cluster0.h6lzk.mongodb.net/FruitsNuts'
+Ag8HR2WciQmGwfcd
 MAIL_HOST = 'smtp.gmail.com'
 MAIL_USER = 'surajgund46@gmail.com'
 MAIL_PASS = 'yptracwfbztdyfyx'
-
 CLOUD_NAME = 'domi7tfkg'
 API_KEY = '814929395299381'
 API_SECRET = 'kXOKCdNqcvuECKs-5s5ICxGYul4'
