Connected to atlas DB

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT = 4000
-MONGODB_URL = 'mongodb+srv://surajgund46:Ag8HR2WciQmGwfcd@cluster0.h6lzk.mongodb.net/FruitsNuts'
-Ag8HR2WciQmGwfcd
+MONGODB_URL = mongodb+srv://surajgund46:Ag8HR2WciQmGwfcd@cluster0.h6lzk.mongodb.net/FruitsNuts
+
+# Ag8HR2WciQmGwfcd
 MAIL_HOST = 'smtp.gmail.com'
 MAIL_USER = 'surajgund46@gmail.com'
 MAIL_PASS = 'yptracwfbztdyfyx'
