--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ MONGODB_URL = mongodb+srv://surajgund46:Ag8HR2WciQmGwfcd@cluster0.h6lzk.mongodb.
 # Ag8HR2WciQmGwfcd
 MAIL_HOST = 'smtp.gmail.com'
 MAIL_USER = 'surajgund46@gmail.com'
-MAIL_PASS = 'yptracwfbztdyfyx'
+MAIL_PASS = 'hdtcnhzunksqkdwt'
 CLOUD_NAME = 'domi7tfkg'
 API_KEY = '814929395299381'
 API_SECRET = 'kXOKCdNqcvuECKs-5s5ICxGYul4'
